<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:background="@color/colorPrimaryDark"
    app:cardCornerRadius="40dp"
    >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/foto_saya"
                    android:cropToPadding="true"
                    android:padding="8dp"
                    android:background="@android:color/darker_gray"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/kipli"
                    />
</androidx.cardview.widget.CardView>

            <TextView
                style="@style/Content.Black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/nama_lengkap"
                android:textSize="24sp"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Content.TextGrey"
                        android:layout_marginBottom="6dp"
                        android:text="@string/data_diri"/>
                    <TextView
                        style="@style/Content"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        style="@style/Content"
                        android:text="@string/no_hp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Content.TextGrey"
                        android:layout_marginBottom="6dp"
                        android:text="@string/alamat"
                        />
                    <TextView
                        style="@style/Content"
                        android:text="@string/MI"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        style="@style/Content"
                        android:text="@string/CAM"
                        android:textColor="@android:color/black"
                        />
                    <TextView
                        style="@style/Content"
                        android:text="@string/POS"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="16dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Content.TextGrey"
                        android:layout_marginBottom="6dp"
                        android:text="@string/berlangganan"/>
                    <TextView
                        style="@style/Content"
                        android:layout_marginBottom="16dp"
                        android:lineSpacingMultiplier="1"
                        android:text="@string/hobby_saya"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>